Dark mode fixes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,12 +15,31 @@
   --ifm-color-primary-lightest: #a37551;
   --ifm-background-color: #eae9eb;
 }
+
+
+
+[data-theme='dark'] .footer__title {
+  color: white;
+}
 .footer__title {
   color: #896344;
 }
+
 .footer__copyright{
   color: #583f2b;
 }
+[data-theme='dark'] .footer__copyright {
+  color: white;
+}
+
+[data-theme='dark'] #github_logo{
+  content: url("/static/img/githubDark.svg");
+}
+
+[data-theme='dark'] #kth_logo{
+  content: url("/static/img/kthDark.svg");
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #d5d3d7;
